# python-project-lvl2

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
.github/workflows/: hexlet-check.yml  linter-status.yml  tests-status.yml
gendiff/: gendiff_process.py  generate_diff.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/yamls/: diff_result.txt  file1.yaml  file2.yaml
