[tool.poetry]
packages = [
  { include = "gendiff" },
]
name = "hexlet_code"
version = "0.1.0"
description = ""
authors = ["Aldiyar Primbayev <primbayev.96aldi@gmail.com>"]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
